--- a/240320_DRF_핵심개념.ipynb
+++ b/240320_DRF_핵심개념.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOuqRzDtdzt/J41qaKDH5TZ",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jsyoo1229/ORM_Django_Backend/blob/main/240320_DRF_%ED%95%B5%EC%8B%AC%EA%B0%9C%EB%85%90.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##manage.py와 models.py의 핵심 개념 정리"
-      ],
       "metadata": {
         "id": "CcGFNMT0V3lB"
-      }
+      },
+      "source": [
+        "##managers.py와 models.py의 핵심 개념 정리"
+      ]
     },
     {
       "cell_type": "code",
@@ -83,5 +67,21 @@
         "is_authenticated"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOuqRzDtdzt/J41qaKDH5TZ",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
